--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Vanessa Marron- Pet Psychology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Vanessa Marron</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="/LearnCS8-Resume/img:vanessamarron.jpg">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +58,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Vanessa Marron
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Pet Psychology📚</div>
+        <p class="lead mb-4">Loves to work<br><br>
 
-        Enter bio here<br><br>
+        Very interesting and hardworking<br><br>
 
-        Enter bio here
+        Lots of experience
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
@@ -95,9 +95,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Created magazines for company Neon<br> 
+              • Organizer at student programs<br>
+              • Experience with Excel<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -108,32 +108,32 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a Rubios="_blank" href="https://pubnub.com">Sprouts</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for checking out clienst<br>
+              • cleaning floors<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2018 - March 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Student Ambassador</h3>
+            <div class="subheading mb-3"><a Rubios="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Organized clinics to help students learn how to read<br>
+            • Assigned and graded student art projects<br>
+            • Created entertaining content to help promote student activism<br>
+            • Spoke in front of 4,000 students each academic quarter<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2018 - January 2022</span>
           </div>
         </div>
 
@@ -152,8 +152,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Masters of Pet Psychology </div>
+            <div>BA in International Relations</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2018 - December 2019</span>
@@ -163,7 +163,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <div class="subheading mb-3">Postgraduate Certificate in Pet Psychology</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
@@ -174,7 +174,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
+            <div class="subheading mb-3">Pet Psychology</div>
             <div>Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
@@ -199,7 +199,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Vanessa Marron</center><br>
 
 
   </div>
